<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_frag_store"
            android:icon="@drawable/baseline_add_shopping_cart_24"
            android:title="@string/menu_store" />
        <item
            android:id="@+id/nav_frag_search"
            android:icon="@drawable/baseline_add_search_24"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_frag_categories"
            android:icon="@drawable/baseline_dashboard_customize_24"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_frag_contact"
            android:icon="@drawable/baseline_contact_phone_24"
            android:title="@string/menu_contact" />

        <item
            android:id="@+id/nav_frag_maps"
            android:icon="@drawable/baseline_add_location_24"
            android:title="@string/menu_map" />
    </group>
</menu>