<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_frag_store">

    <fragment
        android:id="@+id/nav_frag_store"
        android:name="com.example.tiendaonline.StoreFragment"
        android:label="@string/menu_store"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/nav_frag_categories"
        android:name="com.example.tiendaonline.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_frag_contact"
        android:name="com.example.tiendaonline.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/nav_frag_search"
        android:name="com.example.tiendaonline.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nav_frag_maps"
        android:name="com.example.tiendaonline.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps" />
</navigation>